[gd_scene load_steps=2 format=3 uid="uid://bcjhmutky7r6u"]

[ext_resource type="Script" path="res://core/battlescape/shield.gd" id="1_kspa1"]

[node name="Shield" type="Area2D"]
process_mode = 4
rotation = -1.5708
disable_mode = 2
collision_layer = 32
collision_mask = 185273099
input_pickable = false
monitoring = false
script = ExtResource("1_kspa1")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
